product的服务端和客户端完善

--- a/2.grpc.md
+++ b/2.grpc.md
@@ -51,7 +51,7 @@ libprotoc 25.1
 
 
 
-## 4.安装protocol编译器的go插件
+# 2.安装protocol编译器的go插件
 
 要想使用proto文件生成go代码，还需要 编译器的 **Go 插件**。
 
@@ -72,7 +72,7 @@ protoc-gen-go-grpc
 
 `protoc-gen-go` 和 `protoc-gen-go-grpc` 是 Protocol Buffers（Protobuf）编译器插件，用于生成 Go 语言的代码。
 
-### 1.protoc-gen-go
+## 1.protoc-gen-go
 
 - 主要负责从 `.proto` 文件生成消息相关的 Go 代码。
 
@@ -101,7 +101,7 @@ yantao@ubuntu20:~/go/src/grpc_learn/2_grpc/proto$ tree
 
 
 
-### 2. protoc-gen-go-grpc
+## 2. protoc-gen-go-grpc
 
 - 生成客户端和服务器端接口以及实现的 相关的 Go 代码。
 
@@ -123,13 +123,13 @@ yantao@ubuntu20:~/go/src/grpc_learn/2_grpc/proto$ tree
 
 
 
-### 插件参数
+## 3.插件参数
 
 这些选项会以 key-value 对的形式给出，比如 paths=source_relative:.
 
 
 
-## 5.编写proto文件
+# 3.编写proto文件
 
 product.proto
 
@@ -181,7 +181,7 @@ message ManageProductResponse{
 
 
 
-## 6.编译命令
+# 4.编译命令
 
 可以把两条命令合到一起
 
@@ -474,7 +474,7 @@ yantao@ubuntu20:~/go/src/grpc_learn$ go mod init && go mod tidy
 
 
 
-## 7.option go_package
+# 5.option go_package
 
 目前这两个go文件都生成在了当前目录下。
 
@@ -482,13 +482,15 @@ yantao@ubuntu20:~/go/src/grpc_learn$ go mod init && go mod tidy
 
 修改 product.proto
 
-如果 `--go_out=.` ` --go-grpc_out=. `  这会在上级目录新建pkg目录，并将生成的文件放在那里。
+
 
 ```protobuf
 option go_package = ".";
 //修改为：
-option go_package = "../pb";//
+option go_package = "../pb";
 ```
+
+如果编译参数为 `--go_out=.` ` --go-grpc_out=. `  ，这会在上级目录新建pkg目录，并将生成的文件放在那里。
 
 删除之前生成的go文件。
 
@@ -513,7 +515,7 @@ yantao@ubuntu20:~/go/src/grpc_learn/2_grpc/proto$ tree ../pb/
 
 
 
-## 8.创建服务端
+# 6.创建服务端
 
 ```shell
 yantao@ubuntu20:~/go/src/grpc_learn/2_grpc$ mkdir product
@@ -609,10 +611,11 @@ yantao@ubuntu20:~/go/src/grpc_learn/2_grpc$ go run main.go
 
 
 
-## 9.创建客户端
+# 7.创建客户端
 
 ```shell
-yantao@ubuntu20:~/go/src/grpc_learn/2_grpc/product$ touch product_client.go
+yantao@ubuntu20:~/go/src/grpc_learn/2_grpc$ mkdir client
+yantao@ubuntu20:~/go/src/grpc_learn/2_grpc$ touch client/product_client.go
 ```
 
 ```go
@@ -622,29 +625,28 @@ import (
 	"context"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/credentials/insecure"
-	pb "grpc_learn/pkg"
-	"log"
+	pb "grpc_learn/2_grpc/pb"
+	"log/slog"
 	"time"
 )
 
 func main() {
-	conn, err := grpc.Dial("localhost:5000", grpc.WithTransportCredentials(insecure.NewCredentials()))
+	conn, err := grpc.Dial("localhost:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
 	if err != nil {
-		log.Fatalf("无法连接 %v", err)
+		log.Fatal("grpc.Dial err:", err.Error())
 	}
 	defer conn.Close()
-	c := pb.NewSearchServiceClient(conn)
+	c := pb.NewProductServiceClient(conn)
 
 	ctx, cancel := context.WithTimeout(context.Background(), time.Second)
 	defer cancel()
 
-	r, err := c.Search(ctx, &pb.SearchRequest{Query: "手机"})
+	r, err := c.GetProduct(ctx, &pb.GetProductRequest{})
 	if err != nil {
-		log.Fatalf("无法Search %v", err)
+		log.Fatal("c.ListProduct err:", err.Error())
 	}
 
-	log.Printf("获取响应: %s", r.GetResults())
-
+	log.Println("获取响应", r)
 }
 
 ```
@@ -654,8 +656,121 @@ func main() {
 启动客户端
 
 ```shell
-yantao@ubuntu20:~/go/src/grpc_learn/client$ go run main.go 
-2023/12/12 16:56:09 获取响应: [小米 华为 荣耀]
+yantao@ubuntu20:~/go/src/grpc_learn/2_grpc/client$ go run product_client.go 
+2024/01/03 16:23:48 INFO 获取响应 !BADKEY=""
+```
+
+此时响应为空，需要去服务端完善一下代码。
+
+
+
+# 8.完善
+
+## 1.完善proto文件
+
+```protobuf
+message GetProductRequest{
+  int64 id = 1;//商品id
+}
+
+message Product{
+  int64 id = 1;//商品id
+  string name = 2;//商品名字
+  float price = 3;//商品价格
+  string image = 4;//商品图片
+  int64 category = 5;//商品分类id
+}
+```
+
+
+
+重新编译：
+
+```shell
+protoc --go_out=. product.proto --go-grpc_out=. product.proto
+```
+
+
+
+## 2.完善product_server.go
+
+```go
+// GetProduct 实现了 ProductService 接口中的对应方法。
+func (s *ProductServiceServer) GetProduct(ctx context.Context, req *pb.GetProductRequest) (*pb.Product, error) {
+	// 这里应填充根据请求参数获取单个产品的逻辑
+	slog.Info("收到请求:", req.GetId())
+	//创建一个产品
+	pro := pb.Product{
+		Id:       req.GetId(),
+		Name:     "手机",
+		Price:    1999,
+		Image:    "phone.jpg",
+		Category: 1,
+	}
+	return &pro, nil // 示例返回产品
+}
+```
+
+运行：
+
+```shell
+yantao@ubuntu20:~/go/src/grpc_learn/2_grpc$ go run main.go 
+2024/01/03 16:58:33 Starting gRPC server on port :50051
+```
+
+在 gRPC 中使用 Protocol Buffers（protobuf）定义请求和响应结构时，通常会为每个字段生成 getter 和 setter 方法。因此，在实际开发中，推荐使用 `req.GetId()` 而不是直接访问 `req.Id`。
+
+原因如下：
+
+1. **兼容性**：通过 protobuf 工具生成的代码可以确保跨语言兼容性。即使在未来版本中字段类型发生变化，getter 方法也会进行适当的转换或处理以保持向后兼容。
+
+2. **私有字段**：尽管在某些情况下，protobuf 生成的 Go 结构体中的字段可能是可直接访问的，但遵循最佳实践应尽量避免直接访问，因为未来可能会改变实现细节，比如将字段设为私有。
+
+3. **清晰性**：使用 getter 方法更明确地表示你是在获取该字段的值，这对于阅读和理解代码更有益。
+
+4. **潜在的验证逻辑**：在某些场景下，getter 方法可能包含一些简单的验证逻辑或者默认值处理。
+
+综上所述，建议在 Go 语言中调用 `req.GetId()` 获取请求中的产品 ID。
+
+## 3.客户端
+
+```go
+package main
+
+import (
+	"context"
+	"google.golang.org/grpc"
+	"google.golang.org/grpc/credentials/insecure"
+	pb "grpc_learn/2_grpc/pb"
+	"log"
+	"time"
+)
+
+func main() {
+	conn, err := grpc.Dial("localhost:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
+	if err != nil {
+		log.Fatal("grpc.Dial err:", err.Error())
+	}
+	defer conn.Close()
+	c := pb.NewProductServiceClient(conn)
+
+	ctx, cancel := context.WithTimeout(context.Background(), time.Second)
+	defer cancel()
+
+	r, err := c.GetProduct(ctx, &pb.GetProductRequest{Id: 1})
+	if err != nil {
+		log.Fatal("c.ListProduct err:", err.Error())
+	}
+	log.Println("获取响应", r)
+}
+
+```
+
+运行：
+
+```shell
+yantao@ubuntu20:~/go/src/grpc_learn/2_grpc/client$ go run product_client.go 
+2024/01/03 16:58:38 获取响应 id:1  name:"手机"  price:1999  image:"phone.jpg"  category:1
 ```
 
 
