product的服务端和客户端完善返回列表

--- a/2.grpc.md
+++ b/2.grpc.md
@@ -775,7 +775,7 @@ yantao@ubuntu20:~/go/src/grpc_learn/2_grpc/client$ go run product_client.go
 
 
 
-## 10.Protobuf 库
+# 9.Protobuf 库
 
 ```shell
 yantao@ubuntu20:/usr/local/protoc/include$ ls google/protobuf/
