--- a/2.grpc.md
+++ b/2.grpc.md
@@ -803,12 +803,12 @@ compiler   empty.proto       struct.proto          wrappers.proto
 
 
 
-# 2.定义服务
+# 2.四种服务模式
 
 要定义服务，先创建一个 service.proto 的文件
 
 ```protobuf
-service RouteGuide {
+service ProductService {
 
 }
 ```
@@ -820,7 +820,9 @@ service RouteGuide {
 客户端使用存根向服务器发送请求，并等待响应返回，就像正常的函数调用一样。
 
 ```protobuf
-rpc GetFeature(Point) returns (Feature) {}
+service ProductService {
+  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
+}
 ```
 
 
@@ -831,14 +833,210 @@ rpc GetFeature(Point) returns (Feature) {}
 
 `stream 修饰 响应`
 
-
+假设你正在开发一款在线音乐播放应用，用户可以搜索并播放某个歌手的所有歌曲。使用 gRPC 的服务器端流式 RPC，你可以定义如下的服务接口：
 
 ```protobuf
-//可以通过将关键字放在*response*类型前面来指定服务器端流方法。
-service RouteGuide {
-   rpc ListFeatures(Rectangle) returns (stream Feature) {}
+syntax = "proto3";
+
+option go_package = "./pb";
+
+service MusicService {
+  // 用户请求获取某位歌手的所有歌曲列表
+  rpc ListSongs(ArtistRequest) returns (stream SongResponse) {}
 }
+
+// 定义请求消息类型
+message ArtistRequest {
+  string artist_name = 1;//歌手名字
+}
+
+// 定义响应消息类型
+message SongResponse {
+  string song_name = 1;	//歌曲名
+  string album = 2;		//所属唱片
+  int32 release_year = 3;//发版年份
+}
+
+//protoc --go_out=. music_service.proto --go-grpc_out=. music_service.proto
 ```
+
+在这个例子中：
+
+- 用户（客户端）通过调用 `ListSongs` 方法，并传入一个包含歌手名称的 `ArtistRequest` 请求。
+- 服务端接收到请求后，开始在数据库中查找该歌手的所有歌曲，并逐个生成 `SongResponse` 消息。
+- 而不是一次性将所有歌曲信息打包成一个大响应返回，服务端会创建一个数据流，将每首歌曲的信息逐一发送给客户端。
+- 客户端则可以通过读取这个数据流不断接收新歌信息，直到服务端发送完所有歌曲。
+
+这样做的好处是，即使歌手的歌曲数量非常多，也不会因为一次性加载全部数据而导致网络延迟或内存压力过大。同时，客户端可以在收到第一部分歌曲信息后立即开始处理和展示，提供更好的用户体验。
+
+1.创建服务端
+
+```shell
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/2$ mkdir server
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/2$ touch server/main.go
+```
+
+```go
+package main
+
+import (
+	"fmt"
+	"google.golang.org/grpc"
+	"grpc_learn/3_model/2/pb"
+	"log"
+	"net"
+	"time"
+)
+
+type MusicServiceServer struct {
+	pb.UnimplementedMusicServiceServer
+}
+
+type songDatabase struct {
+	songs []pb.SongResponse
+}
+
+func (s *MusicServiceServer) ListSongs(in *pb.ArtistRequest, stream pb.MusicService_ListSongsServer) error {
+	//假设这是从数据库获取的所有歌曲（此处仅为演示，实际应从数据库查询）
+	db := &songDatabase{songs: []pb.SongResponse{
+		{SongName: "第一交响曲（C大调 Op.21）", Album: "贝多芬专辑", ReleaseYear: 1796},
+		{SongName: "第二交响曲（D大调 Op.36）", Album: "贝多芬专辑", ReleaseYear: 1802},
+		{SongName: "第三交响曲（降E大调 Op.55 “英雄”）", Album: "贝多芬专辑", ReleaseYear: 1804},
+		{SongName: "第四交响曲（降B大调 Op.60）", Album: "贝多芬专辑", ReleaseYear: 1806},
+		{SongName: "第五交响曲（c小调 Op.67 “命运”）", Album: "贝多芬专辑", ReleaseYear: 1808},
+		{SongName: "第六交响曲（F大调 Op.68 “田园”）", Album: "贝多芬专辑", ReleaseYear: 1808},
+		{SongName: "第七交响曲（A大调 Op.92）", Album: "贝多芬专辑", ReleaseYear: 1811},
+		{SongName: "第八交响曲（F大调 Op.93）", Album: "贝多芬专辑", ReleaseYear: 1812},
+		{SongName: "第九交响曲（d小调 Op.125 “合唱”）", Album: "贝多芬专辑", ReleaseYear: 1824},
+		{SongName: "第十交响曲（未完成）", Album: "贝多芬专辑", ReleaseYear: 0},
+		{SongName: "威灵顿的胜利（战争交响曲）（D大调 Op,91）", Album: "贝多芬专辑", ReleaseYear: 1813},
+	}}
+
+	//使用流发送
+	for _, song := range db.songs {
+		time.Sleep(time.Second)
+		if err := stream.Send(&song); err != nil {
+			return fmt.Errorf("failed to send song: %v", err)
+		}
+	}
+	return nil
+}
+func main() {
+	//1.创建一个监听在 TCP 端口 50051 上的网络监听器（Listener）。当客户端连接到这个端口时，服务器将能够接受和处理请求。
+	lis, err := net.Listen("tcp", ":50051")
+	if err != nil {
+		log.Fatalf("failed to listen: %v", err)
+	}
+
+	//2.创建一个新的 gRPC 服务器实例。这是一个实现了 gRPC 协议栈的核心服务器对象，用于注册服务、接收客户端连接以及处理 RPC 请求。
+	s := grpc.NewServer()
+
+	//3.注册你在 .proto 文件中定义的服务（这里是 MusicService）的实现到 gRPC 服务器。
+	pb.RegisterMusicServiceServer(s, &MusicServiceServer{})
+
+	//4.开始在之前创建的监听器上运行 gRPC 服务器。Serve() 方法会让服务器开始监听传入的连接，并处理来自客户端的 RPC 请求。
+	err = s.Serve(lis)
+	if err != nil {
+		log.Fatalf("failed to serve: %v", err)
+	}
+}
+
+```
+
+`pb.MusicService_ListSongsServer` 是在 gRPC 服务端实现服务器端流式 RPC（Server-side Streaming）时的一种特殊类型，这里的 `pb` 指的是 protobuf 生成的 Go 语言包。
+
+当您根据 `.proto` 文件使用 Protobuf 编译器生成 Go 代码时，对于定义为服务器端流式 RPC 的方法，编译器会自动生成两个相关的方法签名：
+
+1. 一个用于客户端调用的方法，它返回一个特殊的流对象。
+2. 一个用于服务端实现的方法，接收请求参数以及这个特殊的流对象作为第二个参数。
+
+在这个例子中，`ListSongs` 方法在 `.proto` 文件中被定义为服务器端流式 RPC，所以生成的 Go 代码包含了一个名为 `MusicService_ListSongsServer` 的接口或结构体类型。这个类型代表了从客户端到服务器的数据流，并提供了 `Send()` 等方法，允许服务端将响应消息逐个发送给客户端。
+
+因此，在服务端实现 `ListSongs` 方法时，需要接收这样的一个流对象作为参数，通过调用其 `Send()` 方法来向客户端发送多条消息。
+
+
+
+2.创建客户端
+
+```shell
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/2$ mkdir client
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/2$ touch client/main.go
+```
+
+```go
+package main
+
+import (
+	"context"
+	"fmt"
+	"google.golang.org/grpc"
+	"google.golang.org/grpc/credentials/insecure"
+	"grpc_learn/3_model/2/pb"
+	"io"
+	"log"
+)
+
+func main() {
+	// 1.连接到 gRPC 服务器。本地写测试可以使用不安全的连接
+	conn, err := grpc.DialContext(
+		context.Background(),
+		"localhost:50051",
+		grpc.WithTransportCredentials(insecure.NewCredentials()),
+	)
+	if err != nil {
+		log.Fatal("grpc.DialContext err:", err)
+
+	}
+	defer conn.Close()
+
+	// 创建一个 MusicService 的客户端实例
+	client := pb.NewMusicServiceClient(conn)
+
+	// 准备请求参数
+	req := &pb.ArtistRequest{ArtistName: "贝多芬"}
+
+	// 创建一个上下文
+	ctx := context.Background()
+
+	// 调用 ListSongs 流式 RPC 方法并接收响应
+	stream, err := client.ListSongs(ctx, req)
+	if err != nil {
+		log.Fatal("client.ListSongs err", err)
+	}
+	// 处理流式响应
+	for {
+		songResponse, err := stream.Recv()
+		if err == io.EOF { // 如果没有更多数据可读，则退出循环
+			break
+		}
+		if err != nil { // 其他错误则打印错误信息并退出
+			log.Fatalf("接收失败: %v", err)
+		}
+		fmt.Printf("收到一条歌曲: %s 来自专辑: %s, 发布于: %d\n",
+			songResponse.SongName, songResponse.Album, songResponse.ReleaseYear)
+	}
+	fmt.Println("接收完毕！")
+}
+
+```
+
+```shell
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/2/client$ go run main.go 
+收到一条歌曲: 第一交响曲（C大调 Op.21） 来自专辑: 贝多芬专辑, 发布于: 1796
+收到一条歌曲: 第二交响曲（D大调 Op.36） 来自专辑: 贝多芬专辑, 发布于: 1802
+收到一条歌曲: 第三交响曲（降E大调 Op.55 “英雄”） 来自专辑: 贝多芬专辑, 发布于: 1804
+收到一条歌曲: 第四交响曲（降B大调 Op.60） 来自专辑: 贝多芬专辑, 发布于: 1806
+收到一条歌曲: 第五交响曲（c小调 Op.67 “命运”） 来自专辑: 贝多芬专辑, 发布于: 1808
+收到一条歌曲: 第六交响曲（F大调 Op.68 “田园”） 来自专辑: 贝多芬专辑, 发布于: 1808
+收到一条歌曲: 第七交响曲（A大调 Op.92） 来自专辑: 贝多芬专辑, 发布于: 1811
+收到一条歌曲: 第八交响曲（F大调 Op.93） 来自专辑: 贝多芬专辑, 发布于: 1812
+收到一条歌曲: 第九交响曲（d小调 Op.125 “合唱”） 来自专辑: 贝多芬专辑, 发布于: 1824
+收到一条歌曲: 第十交响曲（未完成） 来自专辑: 贝多芬专辑, 发布于: 0
+收到一条歌曲: 威灵顿的胜利（战争交响曲）（D大调 Op,91） 来自专辑: 贝多芬专辑, 发布于: 1813
+接收完毕！
+```
+
+
 
 ## 3.客户端流式RPC
 
@@ -850,6 +1048,10 @@ service RouteGuide {
 //可以通过将关键字放在*request*类型前面来指定客户端流方法。
 rpc RecordRoute(stream Point) returns (RouteSummary) {}
 ```
+
+
+
+
 
 ## 4.双向流RPC
 
