客户端流式RPC

--- a/2.grpc.md
+++ b/2.grpc.md
@@ -521,6 +521,8 @@ yantao@ubuntu20:~/go/src/grpc_learn/2_grpc/proto$ tree ../pb/
 yantao@ubuntu20:~/go/src/grpc_learn/2_grpc$ mkdir product
 ```
 
+在`product_grpc.pb.go` 中找到 type **ProductServiceServer** interface 部分，实现里面的接口。
+
 `product_server.go`
 
 ```go
@@ -1044,16 +1046,9 @@ yantao@ubuntu20:~/go/src/grpc_learn/3_model/2/client$ go run main.go
 
 `stream 修饰 请求`
 
-```protobuf
-//可以通过将关键字放在*request*类型前面来指定客户端流方法。
-rpc RecordRoute(stream Point) returns (RouteSummary) {}
-```
-
-
-
 ```shell
 yantao@ubuntu20:~/go/src/grpc_learn/3_model/3$ mkdir proto
-yantao@ubuntu20:~/go/src/grpc_learn/3_model/3$ touch proto/vehicle_tracking.proto
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/3$ touch proto/calculate.proto
 ```
 
 ```protobuf
@@ -1061,26 +1056,20 @@ syntax = "proto3";
 
 option go_package = "../pb";
 
-service VehicleTrackingService {
-  rpc RecordVehicleRoute(stream VehicleLocation) returns (RouteSummary) {}
+//从流中获取多个参数，然后求和返回
+service CalculateService{
+  rpc Sum(stream SumRequest) returns (SumResponse){};
 }
 
-message VehicleLocation {
-  string vehicle_id = 1;
-  double latitude = 2;
-  double longitude = 3;
-  int64 timestamp = 4; // 时间戳
+message SumRequest{
+  int64 number = 1;
 }
 
-message RouteSummary {
-  string vehicle_id = 1;
-  int32 total_distance = 2; // 总行驶距离
-  int32 max_speed = 3; // 最高速度
-  int64 start_time = 4; // 行程开始时间戳
-  int64 end_time = 5; // 行程结束时间戳
+message SumResponse{
+  int64 number = 1;
 }
 
-// protoc --go_out=. vehicle_tracking.proto --go-grpc_out=. vehicle_tracking.proto
+// protoc --go_out=. calculate.proto --go-grpc_out=. calculate.proto
 ```
 
 
@@ -1096,90 +1085,49 @@ yantao@ubuntu20:~/go/src/grpc_learn/3_model/3$ touch server/main.go
 package main
 
 import (
-	"fmt"
 	"google.golang.org/grpc"
-	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/status"
 	"grpc_learn/3_model/3/pb"
 	"io"
 	"log"
 	"net"
-	"time"
 )
 
-type VehicleTracking struct {
-	pb.UnimplementedVehicleTrackingServiceServer
+type CalculateServiceServer struct {
+	pb.UnimplementedCalculateServiceServer
 }
 
-func (vt *VehicleTracking) RecordVehicleRoute(stream pb.VehicleTrackingService_RecordVehicleRouteServer) error {
-	var totalDistance float64
-	maxSpeed := 0.0
-	startTime := time.Now()
-	lastLocation := &pb.VehicleLocation{}
+func (s *CalculateServiceServer) Sum(stream pb.CalculateService_SumServer) error {
+	var sum int64
+
 	for {
+		//从stream中读取数据
 		req, err := stream.Recv()
 		if err == io.EOF {
-			break
+			// 当没有更多消息时，返回最终结果
+			return stream.SendAndClose(&pb.SumResponse{Number: sum})
 		}
 		if err != nil {
-			return status.Errorf(codes.Internal, "failed to receive vehicle location: %v", err)
+			log.Fatalf("Failed to receive SumRequest: %v", err)
 		}
-
-		// 计算总距离、最大速度等信息（这里仅为示例，实际情况可能更复杂）
-		if lastLocation != nil {
-			distance := calculateDistance(lastLocation, req)
-			totalDistance += distance
-			speed := calculateSpeed(lastLocation.Timestamp, req.Timestamp, distance)
-			if speed > maxSpeed {
-				maxSpeed = speed
-			}
-		}
-		lastLocation = req
-
-		// 可以在此处进行实时处理或存储到数据库
-		// ...
+		// 对接收到的每个 number 进行累加
+		sum += req.Number
 	}
-
-	endTime := time.Now()
-
-	// 计算完成，发送 RouteSummary 给客户端
-	summary := &pb.RouteSummary{
-		VehicleId:     lastLocation.VehicleId,
-		TotalDistance: int32(totalDistance),
-		MaxSpeed:      int32(maxSpeed),
-		StartTime:     startTime.UnixNano(),
-		EndTime:       endTime.UnixNano(),
-	}
-
-	if err := stream.SendAndClose(summary); err != nil {
-		return fmt.Errorf("failed to send route summary: %v", err)
-	}
-
 	return nil
-}
-
-// 示例辅助函数，用于计算两点之间的直线距离
-func calculateDistance(a, b *pb.VehicleLocation) float64 {
-	// 使用 Haversine 公式或其他算法计算经纬度间的距离
-	// 此处仅作示例，具体实现需参考地理坐标距离计算方法
-	return 0.0
-}
-
-// 示例辅助函数，用于计算速度
-func calculateSpeed(startTime, endTime int64, distance float64) float64 {
-	timeDelta := time.Duration(endTime - startTime).Seconds()
-	return distance / timeDelta
 }
 
 func main() {
 	lis, err := net.Listen("tcp", ":50051")
 	if err != nil {
-		log.Fatalf("failed to listen: %v", err)
+		log.Fatalf("Failed to listen: %v", err)
 	}
-	s := grpc.NewServer()
-	pb.RegisterVehicleTrackingServiceServer(s, &VehicleTracking{})
-	if err := s.Serve(lis); err != nil {
-		log.Fatalf("failed to serve: %v", err)
+
+	grpcServer := grpc.NewServer()
+	pb.RegisterCalculateServiceServer(grpcServer, &CalculateServiceServer{})
+	log.Printf("Server listening at %v", lis.Addr())
+
+	err = grpcServer.Serve(lis)
+	if err != nil {
+		log.Fatalf("Failed to serve: %v", err)
 	}
 }
 
@@ -1194,7 +1142,51 @@ yantao@ubuntu20:~/go/src/grpc_learn/3_model/3$ mkdir client
 yantao@ubuntu20:~/go/src/grpc_learn/3_model/3$ touch client/main.go
 ```
 
-```
+```go
+package main
+
+import (
+	"context"
+	"google.golang.org/grpc"
+	"google.golang.org/grpc/credentials/insecure"
+	"grpc_learn/3_model/3/pb"
+	"log"
+)
+
+func main() {
+	//1.创建与服务器连接
+	conn, err := grpc.DialContext(
+		context.Background(),
+		":50051",
+		grpc.WithTransportCredentials(insecure.NewCredentials()),
+	)
+	defer conn.Close()
+
+	//2.创建客户端
+	client := pb.NewCalculateServiceClient(conn)
+
+	// 创建一个 context 对象，用于控制 RPC 调用的行为
+	ctx := context.Background()
+
+	//创建一个客户端流
+	stream, err := client.Sum(ctx)
+
+	//stream发送数据
+	err = stream.Send(&pb.SumRequest{Number: 10})
+	err = stream.Send(&pb.SumRequest{Number: 90})
+	err = stream.Send(&pb.SumRequest{Number: -150})
+	err = stream.Send(&pb.SumRequest{Number: 0})
+	if err != nil {
+		log.Fatalf("Error sending SumRequest: %v", err)
+	}
+
+	// 完成请求后关闭发送端并接收服务端的唯一响应
+	sumResponse, err := stream.CloseAndRecv()
+	if err != nil {
+		log.Fatalf("Error receiving SumResponse: %v", err)
+	}
+	log.Printf("计算结果: %d", sumResponse.GetNumber())
+}
 
 ```
 
