--- a/2.grpc.md
+++ b/2.grpc.md
@@ -1196,9 +1196,178 @@ func main() {
 
 其中双方使用读写流发送一系列消息。这两个流独立运行，因此客户端和服务器可以按照它们喜欢的任何顺序进行读写：例如，服务器可以等待接收到所有客户端消息后再写响应，也可以交替地读一条消息然后写一条消息，或者其他读写组合。每个流中消息的顺序都会保留下来。
 
-`stream 修饰 请求和响应`
+`stream 请求   stream 响应`
 
 ```
-rpc RecordRoute(stream Point) returns (stream RouteSummary) {}
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/4$ mkdir proto
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/4$ touch proto/bidirectional_calculate.proto
+```
+
+```protobuf
+syntax = "proto3";
+
+option go_package = "../pb";
+
+service CalculateService {
+  rpc BidirectionalSum(stream SumRequest) returns (stream SumResponse){};
+}
+
+message SumRequest{
+  int64 number = 1;
+}
+
+message SumResponse{
+  int64 number = 1;
+}
+
+// protoc --go_out=. bidirectional_calculate.proto  --go-grpc_out=. bidirectional_calculate.proto
+```
+
+
+
+1.创建服务端
+
+```
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/4$ mkdir server
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/4$ touch server/main.go
+```
+
+```go
+package main
+
+import (
+	"fmt"
+	"google.golang.org/grpc"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+	"grpc_learn/3_model/4/pb"
+	"io"
+	"log"
+	"net"
+)
+
+type CalculateService struct {
+	pb.UnimplementedCalculateServiceServer
+}
+
+func (s *CalculateService) BidirectionalSum(stream pb.CalculateService_BidirectionalSumServer) error {
+	var num int64
+	for {
+		req, err := stream.Recv()
+		if err == io.EOF {
+			break
+		}
+		if err != nil {
+			return fmt.Errorf("failed to receive SumRequest: %v", err)
+		}
+
+		num += req.Number
+
+		// 向客户端发送当前的累加结果
+		resp := &pb.SumResponse{Number: num}
+
+		err = stream.Send(resp)
+		if err != nil {
+			return fmt.Errorf("failed to send SumResponse: %v", err)
+		}
+	}
+	return status.Errorf(codes.Unimplemented, "method BidirectionalSum not implemented")
+}
+
+func main() {
+	//
+	lis, err := net.Listen("tcp", ":50051")
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	grpcServer := grpc.NewServer()
+	pb.RegisterCalculateServiceServer(grpcServer, &CalculateService{})
+
+	err = grpcServer.Serve(lis)
+	if err != nil {
+		log.Fatal(err)
+	}
+
+}
+
+```
+
+
+
+2.创建客户端
+
+```
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/4$ mkdir client
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/4$ touch client/main.go
+```
+
+```go
+package main
+
+import (
+	"context"
+	"google.golang.org/grpc"
+	"google.golang.org/grpc/credentials/insecure"
+	"grpc_learn/3_model/4/pb"
+	"log"
+	"time"
+)
+
+func main() {
+	conn, err := grpc.DialContext(context.Background(), "localhost:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
+	if err != nil {
+
+	}
+	client := pb.NewCalculateServiceClient(conn)
+
+	ctx := context.Background()
+	stream, err := client.BidirectionalSum(ctx)
+	if err != nil {
+		log.Fatalf("Error client.BidirectionalSum(ctx): %v", err)
+	}
+
+	for i := 0; i < 10; i++ {
+		req := &pb.SumRequest{Number: int64(i)}
+		err = stream.Send(req)
+		if err != nil {
+			log.Fatalf("Error stream.Send(req): %v", err)
+		}
+
+		// 从服务端接收中间结果
+		resp, err := stream.Recv()
+		if err != nil {
+			log.Fatalf("Error receiving SumResponse: %v", err)
+		}
+
+		log.Printf("累加后的结果: %d", resp.GetNumber())
+		time.Sleep(time.Second)
+	}
+
+	// 完成发送后关闭流
+	err = stream.CloseSend()
+	if err != nil {
+		log.Fatalf("Error closing send side of the stream: %v", err)
+	}
+
+}
+
+```
+
+运行结果：
+
+```shell
+yantao@ubuntu20:~/go/src/grpc_learn/3_model/4$ go run client/main.go 
+2024/01/12 15:50:25 累加后的结果: 0
+2024/01/12 15:50:26 累加后的结果: 1
+2024/01/12 15:50:27 累加后的结果: 3
+2024/01/12 15:50:28 累加后的结果: 6
+2024/01/12 15:50:29 累加后的结果: 10
+2024/01/12 15:50:30 累加后的结果: 15
+2024/01/12 15:50:31 累加后的结果: 21
+2024/01/12 15:50:32 累加后的结果: 28
+2024/01/12 15:50:33 累加后的结果: 36
+2024/01/12 15:50:34 累加后的结果: 45
+
 ```
 
